# MLOpsPythonDemo1

./: Makefile  demo.py
.github/workflows/: ci.yml  main.yml  pylint.yml
train/: azureml_run_pipeline.py  run_AzureML.sh  setup_AzureML.sh
train/extraction/: command.py  extraction.py  init_dataset.sh  pyproject.toml  requirements.txt
train/extraction/tests/: extraction_tests.py
train/output/: command.py  command.yaml
