[tool.poetry]
name = "extraction"
version = "0.0.0"
description = ""
authors = ["Guillaume Chervet <guillaume.chervet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10" # ">=3.10,<3.11"
pymupdf = "1.23.3"


[tool.poetry.group.dev.dependencies]
coverage = "7.3.1" # ">=7.3.1,<8.0.0

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
